--- a/viikkoharkat/viikko6/tehtava1/index.html
+++ b/viikkoharkat/viikko6/tehtava1/index.html
@@ -7,7 +7,19 @@
   <body>
     <h1>Week 6, task 1</h1>
     <p>Typistettävä teksti:</p>
+    <input type="text"></input>
+    <br>
+    <p>Typistettävä merkkien määrä: </p>
 
-    <script src="scrpits.js" type="text/javascript"></script>
+    <form id="dropdownform">
+      <select name="numberdropdown" id="amount">
+        <option value="2">2</option>
+        <option value="4">4</option>
+        <option value="6">6</option>
+        <option value="8">8</option>
+      </select>
+    </form>
+
+    <script src="scripts.js" type="text/javascript"></script>
   </body>
 </html>
