--- a/viikkoharkat/viikko8/tehtava1/index.html
+++ b/viikkoharkat/viikko8/tehtava1/index.html
@@ -5,26 +5,24 @@
     <link rel="stylesheet" href="styles.css"/>
   </head>
 
-  <body>
+  <body style="background-image: url('https://images3.alphacoders.com/112/1122794.jpg');">
     <h1>Numerotaulu</h1>
     <br>
     <table>
-        <thead>
+        <thead id="tablehead">
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+              <td>1</td>
+              <td>2</td>
+              <td>3</td>
+              <td>4</td>
+              <td>5</td>
+              <td>6</td>
+              <td>7</td>
+              <td>8</td>
             </tr>
         </thead>
         <tbody id="tablebody"></tbody>
     </table>
-    <script src="scrpits.js" type="text/javascript"></script>
+    <script src="scripts.js" type="text/javascript"></script>
   </body>
 </html>
