Added chessboard, numbers not centered tho.

--- a/viikkoharkat/viikko8/tehtava1/index.html
+++ b/viikkoharkat/viikko8/tehtava1/index.html
@@ -8,7 +8,7 @@
   <body style="background-image: url('https://images3.alphacoders.com/112/1122794.jpg');">
     <h1>Numerotaulu</h1>
     <br>
-    <table>
+    <table style="background-image: url('https://c1.wallpaperflare.com/preview/714/489/198/chess-chess-board-game-board-flag.jpg');">
         <thead id="tablehead">
             <tr>
               <td>1</td>
