--- a/viikkoharkat/viikko11/tehtava1/index.html
+++ b/viikkoharkat/viikko11/tehtava1/index.html
@@ -42,7 +42,7 @@
     <!-- Page content begins -->
     <br>
     <div class="mx-auto p-3 mb-2 bg-warning text-dark" style="width: 700px;">
-      <img src="https://lh3.googleusercontent.com/proxy/vABNmVKBdXaMvjyxXeMHH3CzJiADz-AEhBn6CkyXTF02j8wauDmNPV0ksn2P2dRdyr6BfbrQOzEEOgWIv5LOs-p9H7YpxlM"
+      <img src="https://www.kilpishop.fi/tuotekuvat/800x800/Tervetuloa%2C%20musta%2C%20kulmikas.jpg"
       width="665">
       <br>
       <br>
