--- a/viikkoharkat/viikko8/tehtava1/index.html
+++ b/viikkoharkat/viikko8/tehtava1/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Numerotaulu</title>
+    <title>Yo it's chess time</title>
     <link rel="stylesheet" href="styles.css"/>
   </head>
 
   <body style="background-image: url('https://images3.alphacoders.com/112/1122794.jpg');">
-    <h1>Numerotaulu</h1>
+    <h1>Let's play</h1>
     <br>
     <table style="background-image: url('https://c1.wallpaperflare.com/preview/714/489/198/chess-chess-board-game-board-flag.jpg');">
         <thead id="tablehead">
