--- a/loppuharjoitus/frontend/page-two.html
+++ b/loppuharjoitus/frontend/page-two.html
@@ -20,7 +20,7 @@
   <body>
     <!-- Navbar begins -->
 
-    <nav class="navbar navbar-dark bg-primary navbar-expand-sm">
+    <nav class="navbar navbar-dark bg-transparent navbar-expand-sm">
       <div class="container-fluid">
         <a class="navbar-brand" href="/index.html">Home</a>
         <ul class="navbar-nav me-auto my-2">
@@ -31,7 +31,7 @@
             <a class="nav-link" href="/page-two.html">Header</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/page-three.html">Header</a>
+            <a class="nav-link" href="/slides.html">Gallery</a>
           </li>
         </ul>
       </div>
@@ -40,7 +40,7 @@
 
     <!-- Page content begins -->
     <br />
-    <div class="mx-auto p-3 mb-2 bg-warning text-dark" style="width: 700px">
+    <div class="mx-auto p-3 mb-2 bg-light text-dark" style="width: 700px">
       <br />
       <br />
       <p>Navigoi yläpalkin kautta haluamallesi sivulle.</p>
