Small changes. Still working on task1

--- a/loppuharjoitus/frontend/slides.html
+++ b/loppuharjoitus/frontend/slides.html
@@ -17,6 +17,7 @@
     <!-- link our own custom css (overwrites bootstrap)-->
     <link rel="stylesheet" href="slides.css" />
   </head>
+
   <body>
     <!-- Navbar begins -->
 
@@ -40,10 +41,9 @@
 
     <!-- Page content begins -->
     <br>
-    <br>
 
     <!-- Container for the image gallery -->
-<div class="container">
+<div class="container" width="500">
   <!-- Full-width images with number text -->
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
@@ -83,8 +83,6 @@
   <div class="caption-container">
     <p id="caption"></p>
   </div>
-
-  <br>
 
   <!-- Thumbnail images -->
   <div class="row">
