--- a/loppuharjoitus/frontend/index.html
+++ b/loppuharjoitus/frontend/index.html
@@ -40,15 +40,15 @@
 
     <!-- Page content begins -->
     <br />
-    <div class="mx-auto p-3 mb-2 bg-light text-dark" style="width: 700px">
+    <div class="mx-auto p-3 mb-2 bg-transparent text-dark" style="width: 650px">
       <br />
       <p>Istutko sinäkin juuri nyt tietokoneella pimeässä huoneessa, huppu tarpeeksi syvällä päässä. Pimennysverhot ovat varmasti tarpeeksi tiiviisti kiinni?</p>
       <p>Päivät ovat kuluneet pandemian vuoksi lähes täysin neljän seinän sisällä, mutta nyt sinua alkoi yllättäen kiinnostamaan, millainen sää ulkona on.</p>
       <p>Jos sitä tänään vaikka kauppaan uskaltaisi...</p>
       <p>Ei hätää toveri. Olet tullut oikeaan paikkaan. <b>Navigoi yläpalkin kautta haluamallesi sivulle,</b> niin saat selville, paistaako ulkona aurinko ja onko <em>kesä</em> jo mahdollisesti tullut.</p>
-      <p>Kannattaa muistaa pysyä tarpeeksi pessimistinä, ettei säähän tarvitse pettyä.</p>
+      <p>Kannattaa muistaa pysyä tarpeeksi pessimistinä, ettei säähän tarvitse pettyä. Suomessa kuitenkin ollaan.</p>
       <br>
-      <h1>Kesää kohti! </h1>
+      <h1>Whether or not</h1>
     </div>
 
     <!-- Page content ends -->
