Changes to fronpage. Mainly.

--- a/loppuharjoitus/frontend/index.html
+++ b/loppuharjoitus/frontend/index.html
@@ -39,14 +39,16 @@
     <!-- Navbar ends -->
 
     <!-- Page content begins -->
-    <br />
     <div class="mx-auto p-3 mb-2 bg-transparent text-dark" style="width: 650px">
-      <br />
-      <p>Istutko sinäkin juuri nyt tietokoneella pimeässä huoneessa, huppu tarpeeksi syvällä päässä. Pimennysverhot ovat varmasti tarpeeksi tiiviisti kiinni?</p>
-      <p>Päivät ovat kuluneet pandemian vuoksi lähes täysin neljän seinän sisällä, mutta nyt sinua alkoi yllättäen kiinnostamaan, millainen sää ulkona on.</p>
-      <p>Jos sitä tänään vaikka kauppaan uskaltaisi...</p>
-      <p>Ei hätää toveri. Olet tullut oikeaan paikkaan. <b>Navigoi yläpalkin kautta haluamallesi sivulle,</b> niin saat selville, paistaako ulkona aurinko ja onko <em>kesä</em> jo mahdollisesti tullut.</p>
-      <p>Kannattaa muistaa pysyä tarpeeksi pessimistinä, ettei säähän tarvitse pettyä. Suomessa kuitenkin ollaan.</p>
+      <br/>
+      <p>Hello you and welcome, today is </p>
+      <p id="weekday"></p>
+      <p id="date"></p>
+      <p>Right now, you are propably sitting alone in a dark room, curtains closed. One and only light comes from your computer screen.</p>
+      <p>Random amount of days have passed inside four walls, and you haven't faintest idea what the Weather is like on outside. You might have heard some horror stories, maybe.</p>
+      <p>Few minutes ago you were surprised by sudden hunger, and your fridge is totally empty. You must go to the grocery store today if you don't wish to die.</p>
+      <p>No worries, mate. You have just found right webpage. <b>Navigate yourself through the upper bar,</b> so you'll find out if it's <em>summer</em> already.</p>
+      <p>Hopefully you to stay pessimistic enough. This is Finland after all.</p>
       <br>
       <h1>Whether or not</h1>
     </div>
