--- a/loppuharjoitus/frontend/index.html
+++ b/loppuharjoitus/frontend/index.html
@@ -22,13 +22,25 @@
 
     <nav class="navbar navbar-dark bg-transparent navbar-expand-sm">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Home</a>
+        <a class="navbar-brand" href="/index.html">Whether or not</a>
         <ul class="navbar-nav me-auto my-2">
           <li class="nav-item">
-            <a class="nav-link" href="/page-one.html">Header</a>
+            <a class="nav-link" href="/page-one.html">Last 50 days</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/page-two.html">Header</a>
+            <a class="nav-link" href="/temperature.html">Temperature</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/rainfall.html">Rainfall</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/light.html">Light</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/wind.html">Wind</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/hum-out.html">Humidity outside</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/slides.html">Gallery</a>
@@ -44,10 +56,14 @@
       <p>Hello you and welcome, today is </p>
       <p id="weekday"></p>
       <p id="date"></p>
-      <p>Right now, you are propably sitting alone in a dark room, curtains closed. One and only light comes from your computer screen.</p>
-      <p>Random amount of days have passed inside four walls, and you haven't faintest idea what the Weather is like on outside. You might have heard some horror stories, maybe.</p>
-      <p>Few minutes ago you were surprised by sudden hunger, and your fridge is totally empty. You must go to the grocery store today if you don't wish to die.</p>
-      <p>No worries, mate. You have just found right webpage. <b>Navigate yourself through the upper bar,</b> so you'll find out if it's <em>summer</em> already.</p>
+      <p>Right now, you are propably sitting alone in a dark room, curtains closed. 
+        One and only light comes from your computer screen.</p>
+      <p>Random amount of days have passed inside four walls, and you haven't faintest 
+        idea what the Weather is like on outside.</p>
+      <p>Few minutes ago you were surprised by sudden hunger, and your fridge is totally empty. 
+        You must go to the grocery store today if you don't wish to die.</p>
+      <p>No worries, mate. You have just found right webpage. <b>Navigate yourself through the upper bar,
+      </b> so you'll find out if it's <em>summer</em> already.</p>
       <p>Hopefully you to stay pessimistic enough. This is Finland after all.</p>
       <br>
       <h1>Whether or not</h1>
