--- a/loppuharjoitus/frontend/slides.html
+++ b/loppuharjoitus/frontend/slides.html
@@ -23,13 +23,25 @@
 
     <nav class="navbar navbar-dark bg-transparent navbar-expand-sm">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Home</a>
+        <a class="navbar-brand" href="/index.html">Whether or not</a>
         <ul class="navbar-nav me-auto my-2">
           <li class="nav-item">
-            <a class="nav-link" href="/page-one.html">Header</a>
+            <a class="nav-link" href="/page-one.html">Last 50 days</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/page-two.html">Header</a>
+            <a class="nav-link" href="/temperature.html">Temperature</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/rainfall.html">Rainfall</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/light.html">Light</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/wind.html">Wind</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/hum-out.html">Humidity outside</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/slides.html">Gallery</a>
@@ -43,7 +55,7 @@
     <br>
 
     <!-- Container for the image gallery -->
-<div class="container" width="500">
+<div class="container" size="" width="20">
   <!-- Full-width images with number text -->
   <div class="mySlides">
     <div class="numbertext">1 / 6</div>
@@ -84,6 +96,7 @@
     <p id="caption"></p>
   </div>
 
+  <br>
   <!-- Thumbnail images -->
   <div class="row">
     <div class="column">
