--- a/loppuharjoitus/frontend/index.html
+++ b/loppuharjoitus/frontend/index.html
@@ -56,15 +56,9 @@
       <p>Hello you and welcome, today is </p>
       <p id="weekday"></p>
       <p id="date"></p>
-      <p>Right now, you are propably sitting alone in a dark room, curtains closed. 
-        One and only light comes from your computer screen.</p>
-      <p>Random amount of days have passed inside four walls, and you haven't faintest 
-        idea what the Weather is like on outside.</p>
-      <p>Few minutes ago you were surprised by sudden hunger, and your fridge is totally empty. 
-        You must go to the grocery store today if you don't wish to die.</p>
-      <p>No worries, mate. You have just found right webpage. <b>Navigate yourself through the upper bar,
+      <p></p>
+      <p><b>Navigate yourself through the upper bar,
       </b> so you'll find out if it's <em>summer</em> already.</p>
-      <p>Hopefully you to stay pessimistic enough. This is Finland after all.</p>
       <br>
       <h1>Whether or not</h1>
     </div>
@@ -72,6 +66,6 @@
     <!-- Page content ends -->
 
     <!-- Link scripts-->
-    <script src="script.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
