--- a/loppuharjoitus/frontend/page-one.html
+++ b/loppuharjoitus/frontend/page-one.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <!-- link our own custom css (overwrites bootstrap)-->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="page-one.css" />
   </head>
   <body>
     <!-- Navbar begins -->
@@ -51,15 +51,26 @@
     <!-- Navbar ends -->
 
     <!-- Page content begins -->
-    <br />
-    <div class="mx-auto p-3 mb-2 bg-light text-dark" style="width: 700px">
-      <br />
-      <br />
-      <p>Navigoi yläpalkin kautta haluamallesi sivulle.</p>
+    <div class="container-sm" style="position: relative; max-width: 800px">
+      <h1>Last 50 datapoints</h1>
+      <p></p>
+      <table class="table table-striped table-bordered border-light">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Date</th>
+            <th>ID</th>
+            <th>Devise</th>
+            <th>Data type</th>
+            <th>Value</th>
+          </tr>
+        </thead>
+        <tbody id="tablebody"></tbody>
+      </table>
     </div>
     <!-- Page content ends -->
 
     <!-- Link scripts-->
-    <script src="script.js"></script>
+    <script src="page-one.js"></script>
   </body>
 </html>
