--- a/loppuharjoitus/frontend/slides.html
+++ b/loppuharjoitus/frontend/slides.html
@@ -26,7 +26,7 @@
         <a class="navbar-brand" href="/index.html">Whether or not</a>
         <ul class="navbar-nav me-auto my-2">
           <li class="nav-item">
-            <a class="nav-link" href="/page-one.html">Last 50 days</a>
+            <a class="nav-link" href="/page-one.html">Last 50 datapoints</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/temperature.html">Temperature</a>
