--- a/loppuharjoitus/frontend/index.html
+++ b/loppuharjoitus/frontend/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
   <head>
-    <title>Weather app</title>
+    <title>Whether or not</title>
     <meta charset="UTF-8" />
     <!-- link the Bootstrap CSS:-->
     <link
@@ -31,16 +31,7 @@
             <a class="nav-link" href="/temperature.html">Temperature</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/rainfall.html">Rainfall</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/light.html">Light</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/wind.html">Wind</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/hum-out.html">Humidity outside</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/slides.html">Gallery</a>
