--- a/loppuharjoitus/frontend/page-one.html
+++ b/loppuharjoitus/frontend/page-one.html
@@ -5,7 +5,7 @@
 -->
 <html>
   <head>
-    <title>Weather app</title>
+    <title>Whether or not</title>
     <meta charset="UTF-8" />
     <!-- link the Bootstrap CSS:-->
     <link
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <!-- link our own custom css (overwrites bootstrap)-->
-    <link rel="stylesheet" href="page-one.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- Navbar begins -->
@@ -31,16 +31,7 @@
             <a class="nav-link" href="/temperature.html">Temperature</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/rainfall.html">Rainfall</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/light.html">Light</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/wind.html">Wind</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/hum-out.html">Humidity outside</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/slides.html">Gallery</a>
@@ -59,8 +50,7 @@
           <tr>
             <th>#</th>
             <th>Date</th>
-            <th>ID</th>
-            <th>Devise</th>
+            <th>Time</th>
             <th>Data type</th>
             <th>Value</th>
           </tr>
