Edited some lookd

--- a/loppuharjoitus/frontend/wind.html
+++ b/loppuharjoitus/frontend/wind.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-dark bg-transparent navbar-expand-sm">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Whether or not</a>
+        <a class="navbar-brand" href="/index.html" style="color: orange"> <img src="https://images.vexels.com/media/users/3/145134/isolated/preview/46b65a02ff99e7bb4e84d4d3d627a729-sun-sharp-beams-icon-by-vexels.png" alt height="100"> Whether or not</a>
         <ul class="navbar-nav me-auto my-2">
           <li class="nav-item">
             <a class="nav-link" href="/page-one.html">Last 50 datapoints</a>
@@ -39,7 +39,7 @@
     <!-- Navbar ends -->
 
     <!-- Page content begins -->
-    <div class="container-sm" style="position: relative; max-width: 800px">
+    <div class="container-sm" style="position: relative; max-width: 600px">
       <h1>Wind</h1>
       <p></p>
       <table class="table table-striped table-bordered border-light">
