--- a/loppuharjoitus/frontend/index.html
+++ b/loppuharjoitus/frontend/index.html
@@ -14,15 +14,15 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+
     <!-- link our own custom css (overwrites bootstrap)-->
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!-- Navbar begins -->
-
     <nav class="navbar navbar-dark bg-transparent navbar-expand-sm">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Whether or not</a>
+        <a class="navbar-brand" href="/index.html" style="color: orange"> <img src="https://images.vexels.com/media/users/3/145134/isolated/preview/46b65a02ff99e7bb4e84d4d3d627a729-sun-sharp-beams-icon-by-vexels.png" alt height="100"> Whether or not</a>
         <ul class="navbar-nav me-auto my-2">
           <li class="nav-item">
             <a class="nav-link" href="/page-one.html">Last 50 datapoints</a>
@@ -36,6 +36,7 @@
         </ul>
       </div>
     </nav>
+
     <!-- Navbar ends -->
 
     <!-- Page content begins -->
