Small layout changes. Started task 3.

--- a/loppuharjoitus/frontend/temperature.html
+++ b/loppuharjoitus/frontend/temperature.html
@@ -21,9 +21,9 @@
     <!-- Navbar begins -->
 
     <nav class="navbar navbar-dark bg-transparent navbar-expand-sm">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="/index.html" style="color: orange"> <img src="https://images.vexels.com/media/users/3/145134/isolated/preview/46b65a02ff99e7bb4e84d4d3d627a729-sun-sharp-beams-icon-by-vexels.png" alt height="100"> Whether or not</a>
-        <ul class="navbar-nav me-auto my-2">
+        <ul class="navbar-nav mx-auto">
           <li class="nav-item">
             <a class="nav-link" href="/page-one.html">Last 50 datapoints</a>
           </li>
@@ -57,6 +57,8 @@
     <!-- Page content ends -->
 
     <!-- Link scripts-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@next/dist/chartjs-adapter-date-fns.bundle.min.js"></script>  
     <script src="temperature.js"></script>
   </body>
 </html>
