--- a/loppuharjoitus/frontend/index.html
+++ b/loppuharjoitus/frontend/index.html
@@ -22,7 +22,14 @@
     <!-- Navbar begins -->
     <nav class="navbar navbar-dark bg-transparent navbar-expand-sm">
       <div class="container">
-        <a class="navbar-brand" href="/index.html" style="color: orange"> <img src="https://images.vexels.com/media/users/3/145134/isolated/preview/46b65a02ff99e7bb4e84d4d3d627a729-sun-sharp-beams-icon-by-vexels.png" alt height="100"> Whether or not</a>
+        <a class="navbar-brand" href="/index.html" style="color: orange">
+          <img
+            src="https://images.vexels.com/media/users/3/145134/isolated/preview/46b65a02ff99e7bb4e84d4d3d627a729-sun-sharp-beams-icon-by-vexels.png"
+            alt
+            height="100"
+          />
+          Whether or not</a
+        >
         <ul class="navbar-nav mx-auto">
           <li class="nav-item">
             <a class="nav-link" href="/page-one.html">Last 50 datapoints</a>
@@ -41,14 +48,16 @@
 
     <!-- Page content begins -->
     <div class="mx-auto p-3 mb-2 bg-transparent text-dark" style="width: 650px">
-      <br/>
+      <br />
       <p id="weekday"></p>
       <p id="date"></p>
-      <br>
-      <br>
-      <p><b>Navigate yourself through the upper bar,
-      </b> so you'll find out if it's <em>summer</em> already.</p>
-      <br>
+      <br />
+      <br />
+      <p>
+        <b>Navigate yourself through the upper bar, </b> so you'll find out if
+        it's <em>summer</em> already.
+      </p>
+      <br />
       <h1>Whether or not</h1>
     </div>
 
