--- a/loppuharjoitus/frontend/temperature.html
+++ b/loppuharjoitus/frontend/temperature.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-    Loppuharjoitus: Home page
+    Loppuharjoitus: Temperature
     Jenni Ylisirniö
 -->
 <html>
@@ -52,9 +52,9 @@
 
       <div style="position: relative; max-width: 800px">
         <canvas id="temperatureChart"></canvas>
-
-        <br />
       </div>
+
+      <br>
       <table class="table table-striped table-bordered border-light">
         <thead>
           <tr>
