--- a/loppuharjoitus/frontend/wind.html
+++ b/loppuharjoitus/frontend/wind.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-    Loppuharjoitus: Home page
+    Loppuharjoitus: Wind
     Jenni Ylisirniö
 -->
 <html>
@@ -48,7 +48,11 @@
     <!-- Page content begins -->
     <div class="container-sm" style="position: relative; max-width: 600px">
       <h1>Wind</h1>
-      <p></p>
+      <br>
+      <div style="position: relative; max-width: 800px">
+        <canvas id="temperatureChart"></canvas>
+      </div>
+      <br>
       <table class="table table-striped table-bordered border-light">
         <thead>
           <tr>
