--- a/loppuharjoitus/frontend/temperature.html
+++ b/loppuharjoitus/frontend/temperature.html
@@ -48,7 +48,19 @@
     <!-- Page content begins -->
     <div class="container-sm" style="position: relative; max-width: 600px">
       <h1>Temperature</h1>
-      <br />
+      <br>
+
+    <select id="timedropdown" name="timedropdown">
+      <option value="">Now</option>
+      <option value="24">24 hours</option>
+      <option value="48">48 hours</option>
+      <option value="72">72 hours</option>
+      <option value="168">1 week</option>
+      <option value="720">1 month</option>
+    </select>
+    <button id="choosebutton" type="button">
+      Update
+    </button>
 
       <div style="position: relative; max-width: 800px">
         <canvas id="temperatureChart"></canvas>
