--- a/loppuharjoitus/frontend/wind.html
+++ b/loppuharjoitus/frontend/wind.html
@@ -49,10 +49,22 @@
     <div class="container-sm" style="position: relative; max-width: 600px">
       <h1>Wind</h1>
       <br>
+      <select id="timedropdown" name="timedropdown">
+        <option value="">Now</option>
+        <option value="24">24 hours</option>
+        <option value="48">48 hours</option>
+        <option value="72">72 hours</option>
+        <option value="168">1 week</option>
+        <option value="720">1 month</option>
+      </select>
+
+      <button id="choosebutton" type="button">Update</button>
+
       <div style="position: relative; max-width: 800px">
         <canvas id="temperatureChart"></canvas>
       </div>
       <br>
+
       <table class="table table-striped table-bordered border-light">
         <thead>
           <tr>
