--- a/loppuharjoitus/frontend/index.html
+++ b/loppuharjoitus/frontend/index.html
@@ -51,13 +51,12 @@
       <br />
       <p id="weekday"></p>
       <p id="date"></p>
-      <br />
-      <br />
-      <p>
-        <b>Navigate yourself through the upper bar, </b> so you'll find out if
-        it's <em>summer</em> already.
-      </p>
-      <br />
+      <p id="temperature"></p>
+      <p id="wind"></p>
+      <br/>
+      <p id="center">
+        <b>Navigate yourself through the upper bar to find more weather data.</b></p>
+      <br/>
       <h1>Whether or not</h1>
     </div>
 
